Bug 544807 - Import from Eudora filter rules does not translate URL-style rules; Fix bundle variable declaration location. r+sr=bienvenu.